@@ -1,5 +1,7 @@
 Changes
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -15,8 +17,8 @@ MANIFEST			This list of files
 META.yml
 README
 SIGNATURE
-t/Task-Map-Tube/00-use.t
-t/Task-Map-Tube/01-version.t
-t/Task-Map-Tube/02-pod_coverage.t
-t/Task-Map-Tube/03-pod.t
+t/Task-Map-Tube/01-use.t
+t/Task-Map-Tube/02-version.t
 Tube.pm
+xt/Task-Map-Tube/01-pod_coverage.t
+xt/Task-Map-Tube/02-pod.t
